# leaf-lang

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.py  rustfmt.toml  syntax.ebnf  syntax.md  test.py  test.sh
compiler/: Cargo.toml
compiler/src/: desugar.rs  desuger.rs  lexer.rs  main.rs  parser.rs
compiler/src/desugar/: tests.rs
compiler/src/desuger/: tests.rs
compiler/src/lexer/: tests.rs
compiler/src/parser/: tests.rs
csrc/: lexer.c  main.c  tokens.c
csrc/utils/: hash.c
docs/: design-decisions.md
include/: assert.h  basic_types.h  code_gen.h  lexer.h  log.h  parser.h  tokens.h  utils.h
include/utils/: hash.h
leaf_proc/: Cargo.toml
leaf_proc/src/: gen_lex.rs  lib.rs  reserved.rs
leafc/: Cargo.toml
leafc/src/: desugar.rs  lexer.rs  main.rs  parser.rs  source_map.rs
leafc/src/desugar/: tests.rs
leafc/src/lexer/: tests.rs
leafc/src/parser/: tests.rs
src/: code_gen.c  desuger.rs  lexer.c  lexer.rs  main.c  main.rs  parser.c  parser.rs  tokens.c
src/utils/: hash.c
tests/: CMakeLists.txt  hash_test.c  test_code_gen.c  test_hash.c  test_lexer.c  test_parser.c
